Updated footer styling and button styling

--- a/ckan/custom_public/less/toolbar.less
+++ b/ckan/custom_public/less/toolbar.less
@@ -81,6 +81,7 @@
 
 .toolbar .btn-primary {
   .btn-primary;
+  //.buttonBackgroundSolid(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight);
 }
 
 .toolbar .btn-warning {
