--- a/ckan/custom_public/less/variables.less
+++ b/ckan/custom_public/less/variables.less
@@ -3,6 +3,8 @@
 @spritePath: "@{imagePath}/sprite-ckan-icons.png";
 @fontAwesomePath: "../../../base/vendor/font-awesome/fonts";
 
+@customImagePath: "../../img";
+
 // Layout Variables
 @layoutFontFamily: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @layoutTextColor: #333333;
@@ -11,6 +13,9 @@
 @layoutBackgroundColor: #efefef;
 @layoutTrimBackgroundColor: #fff;
 @layoutTrimBorderColor: #c9c9c9;
+
+@greenStart: #aac11f;
+@greenEnd: #e3f782;
 
 @gridColumns: 12;
 @gridColumnWidth: 70px;
@@ -49,8 +54,8 @@
 
 @footerTextColor: @layoutTextColor;
 @footerLinkColor: @layoutLinkColor;
-@footerBackgroundColorStart: #aac11f;
-@footerBackgroundColorEnd: #e3f782;
+@footerBackgroundColorStart: @moduleHeadingBackgroundColorStart;
+@footerBackgroundColorEnd: @moduleHeadingBackgroundColorEnd;
 
 @inputColor: @black;
 @inputBackground: @white;
