--- a/ckan/custom_public/less/footer.less
+++ b/ckan/custom_public/less/footer.less
@@ -41,7 +41,7 @@
   width: 65px;
   height: 21px;
   margin-top: 2px;
-  background: url("@{imagePath}/ckan-logo-footer.png") no-repeat top left;
+  background: url("@{customImagePath}/ckan-logo-footer.png") no-repeat top left;
   text-indent: -900em;
 }
 
