--- a/ckan/custom_public/less/mixins.less
+++ b/ckan/custom_public/less/mixins.less
@@ -1,3 +1,26 @@
+// Solid button backgrounds
+// ------------------
+.buttonBackgroundSolid(@startColor, @endColor) {
+  // gradientBar will set the background to a pleasing blend of these, to support IE<=9
+  .gradientBar(@startColor, @startColor);
+  *background-color: @startColor; /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+  .reset-filter();
+
+  // in these cases the gradient won't cover the background, so we override
+  &:hover, &:active, &.active, &.disabled, &[disabled] {
+    background-color: @endColor;
+    *background-color: darken(@endColor, 5%);
+    background-position: 0 -50px;
+    .transition(none);
+  }
+
+  // IE 7 + 8 can't handle box-shadow to show active, so we darken a bit ourselves
+  &:active,
+  &.active {
+    background-color: darken(@endColor, 10%) e("\9");
+  }
+}
+
 .transform (@func) {
   -webkit-transform: @arguments;
   -moz-transform: @arguments;
