--- a/ckan/custom_public/less/css/main.css
+++ b/ckan/custom_public/less/css/main.css
@@ -8897,6 +8897,16 @@ header.masthead .debug {
   margin-left: 20px;
   width: 520px;
 }
+.attribution {
+  width: 200px;
+}
+.award-smart-city-footer-logo {
+    background: url("/sites/odaa.dk/themes/odaa//img/it-award-smartcity-2013.png") no-repeat scroll 0 0 transparent;
+    float: left;
+    height: 57px;
+    margin-right: 30px;
+    width: 267px;
+}
 /* line 23, /Volumes/CKAN 2.0/pyenv/src/ckan/ckan/custom_public/less/footer.less */
 .footer-links {
   margin-left: 0;
