--- a/ckan/custom_public/less/footer.less
+++ b/ckan/custom_public/less/footer.less
@@ -31,6 +31,18 @@
   margin-bottom: 5px;
 }
 
+.award-smart-city-footer-logo {
+    background: url("/sites/odaa.dk/themes/odaa//img/it-award-smartcity-2013.png") no-repeat scroll 0 0 transparent;
+    float: left;
+    height: 57px;
+    margin-right: 30px;
+    width: 267px;
+}
+
+.attribution {
+  width: 200px;
+}
+
 .attribution small {
   color: @footerTextColor;
   font-size: 12px;
