--- a/ckan/custom_public/less/footer.less
+++ b/ckan/custom_public/less/footer.less
@@ -31,12 +31,24 @@
   margin-bottom: 5px;
 }
 
+.attribution-first {
+  width: auto;
+}
+
 .award-smart-city-footer-logo {
     background: url("/sites/odaa.dk/themes/odaa//img/it-award-smartcity-2013.png") no-repeat scroll 0 0 transparent;
-    float: left;
+    display: block;
     height: 57px;
-    margin-right: 30px;
     width: 267px;
+}
+
+.made-with-aarhus-footer-logo {
+    background: url("../../img/made_with_aarhus_logo.png") no-repeat scroll 0 0 transparent;
+    display: block;
+    float: right;
+    margin-top: 30px;
+    height: 100px;
+    width: 136px;
 }
 
 .attribution {
