--- a/ckan/custom_public/less/footer.less
+++ b/ckan/custom_public/less/footer.less
@@ -15,6 +15,14 @@
   color: @footerLinkColor;
 }
 
+.footer-first {
+  margin-right: 20px;
+}
+
+.footer-first, .footer-second {
+  float: left;
+}
+
 .footer-links,
 .attribution {
   .makeColumn(6);
@@ -36,23 +44,22 @@
 }
 
 .award-smart-city-footer-logo {
-    background: url("/sites/odaa.dk/themes/odaa//img/it-award-smartcity-2013.png") no-repeat scroll 0 0 transparent;
-    display: block;
-    height: 57px;
-    width: 267px;
+  background: url("../img/it-award-smartcity-2013.png") no-repeat;
+  float: right;
+  height: 57px;
+  width: 267px;
 }
 
 .made-with-aarhus-footer-logo {
-    background: url("../../img/made_with_aarhus_logo.png") no-repeat scroll 0 0 transparent;
-    display: block;
-    float: right;
-    margin-top: 30px;
-    height: 100px;
-    width: 136px;
+  background: url("../../img/made_with_aarhus_logo.png") no-repeat scroll 0 0 transparent;
+  float: right;
+  margin-left: 30px;
+  height: 100px;
+  width: 136px;
 }
 
 .attribution {
-  width: 200px;
+  margin: 0;
 }
 
 .attribution small {
