UPDATE TO VEWSION 2.1.2

--- a/ckan/public/base/less/layout.less
+++ b/ckan/public/base/less/layout.less
@@ -114,6 +114,7 @@
     margin-top: 15px;
     padding-top: 10px;
     border-top: 1px dotted #DDD;
+    word-break: break-word;
     dl dd {
       margin-top: 3px;
       margin-left: 0;
