--- a/ckan/templates/organization/read.html
+++ b/ckan/templates/organization/read.html
@@ -1,7 +1,7 @@
 {% extends "organization/read_base.html" %}
 
 {% block page_primary_action %}
-  {% if h.check_access('package_create', {'organization_id': c.group_dict.id}) %}
+  {% if h.check_access('package_create', {'owner_org': c.group_dict.id}) %}
     {% link_for _('Add Dataset'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
   {% endif %}
 {% endblock %}
