--- a/ckanext/reclinepreview/theme/templates/recline.html
+++ b/ckanext/reclinepreview/theme/templates/recline.html
@@ -4,12 +4,9 @@
   <div data-module="reclinepreview" data-module-site_url="{{ h.dump_json(h.url('/', locale='default', qualified=true)) }}">
     <h4 class="loading-dialog">
       <div class="loading-spinner"></div>
-      <div class="left">{{ _('Loading..up') }}</div>
+      <div class="left">{{ _('Loading...') }}</div>
     </h4>
   </div>
 
   {% resource 'ckanext-reclinepreview/main' %}
- 
- 
 {% endblock %}
-
